unpackaged/main/default/objects/Call_Center_FAQ__mdt/Call_Center_FAQ__mdt.object-meta.xml
<CustomObject>
    <label>Call Center FAQ</label>
    <pluralLabel>Call Center FAQs</pluralLabel>
</CustomObject>