unpackaged/main/default/objects/Call_Center_FAQ__mdt/fields/Activities_Ar__c.field-meta.xml
<CustomField>
    <fullName>Activities_Ar__c</fullName>
    <label>Activities Ar</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>