unpackaged/main/default/objects/Call_Center_FAQ__mdt/fields/Department_Ar__c.field-meta.xml
<CustomField>
    <fullName>Department_Ar__c</fullName>
    <label>Department Ar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>خدمات النقل والتأجير</fullName>
                <default>true</default>
                <label>خدمات النقل والتأجير</label>
            </value>
            <value>
                <fullName>خدمات المزاد</fullName>
            </value>
            <value>
                <fullName>معهد مواصلات الإمارات للسياقة</fullName>
            </value>
            <value>
                <fullName>المدرسة والنقل</fullName>
            </value>
            <value>
                <fullName>الصيانة والإصلاح والعمليات</fullName>
            </value>
            <value>
                <fullName>القسم الرقمي</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>