unpackaged/main/default/objects/Call_Center_FAQ__mdt/fields/Service_Ar__c.field-meta.xml
<CustomField>
    <fullName>Service_Ar__c</fullName>
    <label>Service Ar</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>