unpackaged/main/default/objects/Call_Center_FAQ__mdt/listViews/All_Arabic.listView-meta.xml
<ListView>
    <fullName>All_Arabic</fullName>
    <columns>Department_Ar__c</columns>
    <columns>Sequence__c</columns>
    <columns>Number__c</columns>
    <columns>MasterLabel</columns>
    <columns>Service_Ar__c</columns>
    <columns>Activities_Ar__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Arabic</label>
    <language>en_US</language>
</ListView>