unpackaged/main/default/objects/Call_Center_FAQ__mdt/listViews/All_English.listView-meta.xml
<ListView>
    <fullName>All_English</fullName>
    <columns>Department_En__c</columns>
    <columns>Sequence__c</columns>
    <columns>Number__c</columns>
    <columns>MasterLabel</columns>
    <columns>Service_En__c</columns>
    <columns>Activities_En__c</columns>
    <filterScope>Everything</filterScope>
    <label>All English</label>
    <language>en_US</language>
</ListView>